# k8s_script

./: container.json  file  mogo-dep.yaml  nginx_service.yaml  pode.json  policy.json  quark_pod.yaml  quark_runtime.yaml
micro_benchmark/: Dockerfile  Makefile  build_image.sh  main.c
mongo_tls/: my-mongo-client.yaml  my-mongo-config.yaml  my-mongo-deployment.yaml  my-mongo-pvc.yaml  my-mongo-secret.yaml  my-mongo-service.yaml  pod.yaml  volume.yaml
mongo_tls/ssl/: mongodb.crt  mongodb.csr  mongodb.key  mongodb.pem  root-ca.key  root-ca.pem  root-ca.srl
qualitative-any/: Cargo.toml  Dockerfile  build_image.sh
qualitative-any/src/: main.rs
test_get_report_syscall/: Cargo.toml  Dockerfile  build_image.sh
test_get_report_syscall/src/: main.rs
