[package]
name = "test_get_report_syscall"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syscalls = "0.6.9"
sha2 = { version = "0.10.6", default-features = false,  features = ["force-soft"]}
hex-literal = "0.3.4"
base64ct = { version = "1.5.3",  features = ["alloc"]}
